--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,5 +14,32 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
+body {
+  min-height: 100vh;
+}
+
+.movile-design {
+  height: 100vh;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  padding: 7rem;
+  position: absolute;
+  width: 100vh;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
